[metadata]
name = Mask-Redis
version = attr: mask_redis.__version__
url = https://github.com/Eastwu5788/Mask-Redis
project_urls =
    Document = https://github.com/Eastwu5788/Mask-Redis
    Source Code = https://github.com/Eastwu5788/Mask-Redis
    Issue = https://github.com/Eastwu5788/Mask-Redis/issues
license = MIT
author = Wu Dong
author_email = wudong@eastwu.cn
description = Redis extension for Mask.
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
include = mask_redis, mask_redis.*
